--- a/index.html
+++ b/index.html
@@ -11,36 +11,56 @@
 </head>
 <body>
 <main id='container'>
-
-    <header>
-        
-        <nav id='menu'>
-            <a href='index.html'>
-                <img id='logo-img' src='_imagens/android-chrome-50x50.png' alt='Logo do site'>
+    <header id='cabecario'>
+        <nav>
+            <a href='#'>
+                <img src='_imagens/android-chrome-70x70.png' alt='Vilania'>
             </a>
-            <ul id='navegador'>
-                <li><a href='index.html'>Home</a></li>
-                <li><a href='#'>Galeria</a></li>
+            <ul id='menu-principal'>
+                <li><a href='#'>Home</a></li>
                 <li><a href='#'>Produtos</a></li>
+                <li><a href='#'>Galeria</a></li>
                 <li><a href='#'>Fale Conosco</a></li>
             </ul>
         </nav>
-
         <div id='banner'>
-            <h1>VILANIA</h1>
+            <h1>Vilania</h1>
             <h2>O Melhor dos Piores</h2>
         </div>
-
     </header>
-
-    <section class='involucro'>
-        <h1>Teste</h1>
+    <section>
+        Aqui vai o conteúdo principal
     </section>
-
-    <footer>
-        
+    <footer id='rodape'>
+        <div id='links' class='boxes-rodape'>
+            <h3>Links</h3>
+            <ul id='menu-rodape'>
+                <li><a href='#'>Home</a></li>
+                <li><a href='#'>Produtos</a></li>
+                <li><a href='#'>Galeria</a></li>
+                <li><a href='#'>Fale Conosco</a></li>
+            </ul>
+        </div>
+        <div id='politicas' class='boxes-rodape'>
+            <h3>Políticas</h3>
+            <ul>
+                <li><a href='#'>Políticas de Envio</a></li>
+                <li><a href='#'>Políticas de Reenbolso</a></li>
+                <li><a href='#'>Políticas de Privacidade</a></li>
+            </ul>
+        </div>
+        <div id='siganos' class='boxes-rodape'>
+            <h3>Siga-nos!</h3>
+            <ul>
+                <li><a href='#'>Facebook</a></li>
+                <li><a href='#'>Instagram</a></li>
+                <li><a href='#'>Twitter</a></li>
+            </ul>
+        </div>
+        <div id='creditos'>
+            <p>by @Fabio Medeiros</p>
+        </div>
     </footer>
-
 </main>
 </body>
 </html>
