--- a/index.html
+++ b/index.html
@@ -24,13 +24,36 @@
             </ul>
         </nav>
         <div id='banner'>
-            <h1>Vilania</h1>
+            <h1 class='titulo1'>Vilania</h1>
             <h2>O Melhor dos Piores</h2>
         </div>
     </header>
-    <section>
+    
+    <section id='principal'>
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
         Aqui vai o conteúdo principal
     </section>
+
+    <aside id='lateral'>
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+        Aqui vai o conteúdo lateral
+    </aside>
+
     <footer id='rodape'>
         <div id='links' class='boxes-rodape'>
             <h3>Links</h3>
