--- a/index.html
+++ b/index.html
@@ -40,9 +40,20 @@
         Aqui vai o conteúdo principal
         Aqui vai o conteúdo principal
         Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
+        Aqui vai o conteúdo principal
     </section>
 
     <aside id='lateral'>
+        Aqui vai o conteúdo lateral
         Aqui vai o conteúdo lateral
         Aqui vai o conteúdo lateral
         Aqui vai o conteúdo lateral
