--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='_imagens/favicon_io/favicon.ico'>
     <link rel='stylesheet' type='text/css' href='_css/estilo.css'>
     <script type='text/javascript' src='_js/script.js'></script>
-    <title>Vilania</title>
+    <title>Os Piores</title>
 </head>
 <body>
 <main id='container'>
